--- a/README.Rmd
+++ b/README.Rmd
@@ -13,9 +13,13 @@ library(emo)
 
 # RStudio Instructor Certification Teaching Exam 
 
-`r emo::ji("tv")` [View Slides](https://friendly-wozniak-ba74a8.netlify.app/#1)
+`r emo::ji("tv")` [View Sample Lesson Slides](https://friendly-wozniak-ba74a8.netlify.app/#1)
 
 ## Learner Persona 
 
-Brooks is a researcher in a cancer wet lab. He has worked extensively with Excel but is new to programming in R. His research invovles managing data from mulitple different platforms and he needs to be able to examine his data to spot potential issues, such as batch effects, and calculate basic statistics. He believes R will be the best way to manage his data in a reproducible manner. He is currently working in a lab while also studying for school, so he needs to  be able get up and started working with R quickly. He also needs to work in a flexible environment that works with his school and research schedule. 
+Brooks is a researcher in a cancer wet lab. He has worked extensively with Excel but is new to programming in R. His research involves managing data from multiple different platforms and he needs to be able to examine his data to spot potential issues, such as batch effects, and calculate basic statistics. He believes R will be the best way to manage his data in a reproducible manner. He is currently working in a lab while also studying for school, so he needs to  be able get up and started working with R quickly. He also needs to work in a flexible environment that works with his school and research schedule. 
+
+## Concept Map 
+
+![concept map](figures/concept-map.png)
 
